added form validation

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
     <div class="box sidebar">
       <p>Enter your dream cars in this handy wishlist!</p>
+      <p>Based on the car year and price, a priority will be calculated. <br> Priority 1 is the highest and means you should get the car right away!</p>
 
       <div class="data-form">
         <form id="form" action="">
@@ -37,7 +38,6 @@
     </div>
 
     <div class="box footer">
-      <p>Footer</p>
     </div>
   </div>
 </body>
