--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
+    <title>Ray's Initiative Tracker</title>
     <meta charset="utf-8">
+      <script src="/js/scripts.js"></script>
   </head>
   <body>
+    <h1>Raymond's Initiative Tracker</h1>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
+      <label>Creature name</label>
+      <input type="text" id="name" value="creature name"><br />
+      <label>Initiative #</label>
+      <input type="number" id="initiative" value="0"><br />
       <button>submit</button>
     </form>
+    <table class="list">
+      <thead>
+        <th class="name">Name</th>
+        <th class="num">Initiative</th>
+      </thead>
+      <tbody id="creatures"></tbody>
+    </table>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
