--- a/public/index.html
+++ b/public/index.html
@@ -9,26 +9,27 @@
 </head>
 
 <body>
-    <div class="main">
+    <div class="grid-container">
         <div class="header">
-            <h1>Gym Work Schedule for Chris</h1>
+            <h1>Rec Center Work Schedule for Chris</h1>
             <img src="assets/mainlogo.jpg" id="mainlogo">
         </div>
-        <div class="left">
+        <div class="panel">
             <form id="mainForm">
-                <input type="text" id="worker" placeholder="Put Worker Name">
-                <input type="text" id="startTime" placeholder="Start Time of Work">
-                <input type="text" id="endTime" placeholder="End Time of Work">
+                <input type='text' id='workername' placeholder="Name of the Worker">
+                <input type='text' id='starttime' placeholder="Time shift started">
+                <input type='text' id='endtime' placeholder="Time shift ended">
                 <button>Submit</button>
             </form>
         </div>
         <div class="content">
-            <table id="workTable">
+            <table id="resultsTable">
                 <tr>
-                    <th>worker</th>
-                    <th>startTime</th>
-                    <th>endTime</th>
-                    <th>workTime</th>
+                    <th>Name</th>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th>Time Worked</th>
+                    <th>Payment</th>
                 </tr>
             </table>
         </div>
