--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,11 @@
 
     <div class="box sidebar">
       <p>Enter your dream cars in this handy wishlist!</p>
-      <p>Based on the car year and price, a priority will be calculated. <br> Priority 1 is the highest and means you should get the car right away!</p>
+      <p>Based on the car year and price, a priority will be calculated. <br> Priority 1 is the highest and means you
+        should get the car right away!</p>
 
       <div class="data-form">
-        <form id="form" action="">
+        <form id="form">
           <input type='text' id='Make' placeholder="Make">
           <input type='text' id='Model' placeholder="Model">
           <input type='number' id='Year' placeholder="Year">
@@ -29,11 +30,13 @@
 
     <div class="box content">
       <table id="data-table">
-        <th>Make </th>
-        <th> Model </th>
-        <th> Year </th>
-        <th> Price </th>
-        <th> Priority </th>
+        <tr>
+          <th>Make</th>
+          <th>Model</th>
+          <th>Year</th>
+          <th>Price</th>
+          <th>Priority</th>
+        </tr>
       </table>
     </div>
 
