💿🚉 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,6 @@
   }
   var rows = [{'name': 'Name', 'year': 'Year', age: 'Age'}, { 'name': 'Matt', 'year': 1998, 'age': 22 },
   { 'name': 'Jared', 'year': 1999, 'age': 21 },
-  { 'name': 'Alec', 'year': 1998, 'age': 15}]
+  { 'name': 'Gary', 'year': 1990, 'age': 30}]
   </script>
 </html>
