added CSSand updates to server

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Add Player Stats</title>
+    <title>Roster Builder</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
@@ -15,7 +15,6 @@
       </div>
       <div id="userInput">
         <form action="">
-          Add a Player: <br>
           <label for='number'> Number: </label>
           <input type='number' id='number'>
           <label for='firstName'> First Name: </label>
@@ -25,12 +24,12 @@
           <label for='goals'> Goals: </label>
           <input type='number' id='goals'>
           <label for='assists'> Assists: </label>
-          <input type='number' id='assists'><br>
+          <input type='number' id='assists'><br><br>
           
-          <div>
+          <div id="buttons">
             <button id="add">Add Player</button>
             <button id="delete">Delete Previous Player</button>
-            <button id="edit">Edit Player</button>
+            <button id="edit">Edit Player</button><br><br><br>
           </div>
           
         </form>
