--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css\style.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>Welcome to Local Ice Cream Shop!</h1>
-    <h5>We are happy you are here! please place your order below. If you would like to see all the orders we are working on right now,
-      and change your order, please select the button at the bottom of the screen.
+    <h1>WELCOME TO LOCAL ICE CREAM SHOP EMPLOYEE FORM!</h1>
+    <h5>
+      We are happy you are here! please place your order below. If you would
+      like to see all the orders we are working on right now, and change your
+      order, please select the button at the bottom of the screen.
     </h5>
 
+    <h1>
+      Our Menu
+    </h1>
     <ul>
       <li>
         Chocolate
@@ -35,40 +41,25 @@
       </li>
     </ul>
 
-    <form action="" method="POST">
-    
-      <input type='text' id="yourorder" value="your order">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-      
+    <h5>
+      Create an order!
+    </h5>
+    <form action="" class="ordersForm">
+      <input type="text" id="orderItem" value="your title here" />
+      <input type="text" id="orderDetails" value="your details here" />
+      <input type="number" id="orderCost" step="0.01" min="0.01" value="0.01" />
+      <button class="submitBtn">submit</button>
     </form>
+
+    <h1>Current Orders</h1>
+    <table id="currentTasks">
+      <tr>
+        <td>Order Number</td>
+        <td>Order Item</td>
+        <td>Details</td>
+        <td>Time Started</td>
+        <td>Goal End Time</td>
+      </tr>
+    </table>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value},
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
