--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,44 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
+    <title>Cursed Cats</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/utility.css" />
+    <script src="js/index.js"></script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <nav class="c_header">
+      <h1 class="u_txt--white u_txt--hdg1">Cursed Cat Wiki</h1>
+    </nav>
+    <main>
+      <h2 class="u_txt--white u_txt--hdg2 c_catInfo">Welcome to the Cursed Cat Wiki, Feel Free to Browse the Cats or Add Your Own</h2>
+      <section class="c_catList">
+        <h3 class="u_txt--white u_txt--hdg3 c_catList__heading">Our Current Cats</h3>
+        <!-- Cats Go Here -->
+      </section>
+      <!-- <section>
+        <header>
+          <h3 class="u_txt--white u_txt--hdg3">
+            Add a New Cat to the List
+          </h3>
+        </header>
+        <form>
+          <label for="catName" class="u_txt--white">
+            Cat Name
+          </label>
+          <input
+            class="c_catForm__catName" 
+            id="catName"
+          />
+        </form>
+      </section> -->
+    </main>
+    <footer class="c_footer">
+      <section class="c_footer__information">
+          <h3 class="u_txt--white u_txt--hdg3">Author:</h3>
+          <p class="u_txt--white">Christian Tweed</p>
+      </section>
+    </footer>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
