working version with alter

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,13 @@
       <button class="submitBtn">submit</button>
     </form>
 
+    <form action="" class="alterOrdersForm">
+      <input type="text" id="newOrderNumber" value="Order Number" />
+      <input type="text" id="newOrderItem" value="Order Item" />
+      <input type="text" id="newOrderDetails" value="Order Details" />
+      <button class="changeBtn">change order</button>
+    </form>
+
     <h1>Current Orders</h1>
     <table id="currentTasks">
       <tr>
