--- a/public/index.html
+++ b/public/index.html
@@ -8,27 +8,32 @@
   </head>
   <body>
     <div class="flex-container">
-    <h1>
+    <h1 onclick="location.reload()">
       Project Manager
     </h1>
+      <p>
+        A WebApp for managing projects. All priorities are determined by time frame.
+      </p>
     <h2>
       Submit a Project Here:
     </h2>
-    <form action="">
+    <form>
       <input type="text" id="pName"  onfocus="this.value = ''"  placeholder = "Project Name">
       <input type ="text" id="pDesc"  onfocus="this.value = ''"  placeholder ="Project Description">
       <input type ="text" id="pSDate"  onfocus="this.value = ''"  placeholder="Start Date MM-DD-YYYY">
       <input type = "text" id="pEDate"  onfocus="this.value = ''" placeholder = "End Date MM-DD-YYYY">
       <button id="submit">Submit</button>
-      <button id="get">
-      get
-      </button>
     </form>
       <p id="status"></p>
         
   <h2>
      Current Projects
   </h2>
+      <button id="reset">
+        Reset
+      </button>
+      <p>
+      </p>
 <table id ="projectTable">
   <tr>
     <th>Name</th>
@@ -36,6 +41,7 @@
     <th>Start Date</th>
     <th>End Date</th>
     <th>Priority</th>
+    <th>Edit</th>
   </tr>
 </table>
       </div>
