--- a/public/index.html
+++ b/public/index.html
@@ -1,62 +1,75 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/scripts.js"></script>
-  </head>
-  <body>
-    <div>
+
+<head>
+  <title>CS4241 Assignment 2</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/scripts.js"></script>
+</head>
+
+<body>
+  <div>
     <h1 font-weight: bold;>Welcome to Speed Clicker</h1>
 
     <p id="WelcomeText">
-      This is a webpage for Jordan Stoessel's Assignment 2. After hitting the <strong>start</strong> button you will be timed for 30 seconds to click as fast as you can. Your results will be displayed within the <strong>leaderboard</strong>. Try to get the high score! 
+      This is a webpage for Jordan Stoessel's Assignment 2. After hitting the <strong>start</strong> button you will be
+      timed for 30 seconds to click as fast as you can. Your results will be displayed within the
+      <strong>leaderboard</strong>. Try to get the high score!
     </p>
   </div>
 
-    <div>
-      <input type="button" class="playbtn" id='startbtn' onclick="startClicked()" value="Start"></input>
-    </div>
-
+  <div class="center">
+    <input type="button" id='startbtn' onclick="startClicked()" value="Start"></input>
     <a class="poststart" id="clickbtn" onclick="addClicked()"><img src="button.png"></a>
-    
-    <div>
-      <p id='currentclicks' class='poststart'>0 Points</p>
-    </div>
+  </div>
 
-    <div>
-      <form action="">
-        <p id="inputname"class="postgame">
-          Please input your name:
-        </p>
+  <div class="center">
+    <p id='currentclicks' class='poststart'>0 Points</p>
+  </div>
+
+  <div class="center">
+    <form action="">
+      <p id="inputname" class="postgame">
+        Please input your name:
+      </p>
+      <div class="center">
         <input type='text' id='yourname' name='yourname' class='postgame' value="">
-        <button  id='submitbtn' class='postgame' method="POST" action="/submit" >Submit</button>
-      </form>
-    </div>
+        <button id='submitbtn' class='postgame' method="POST" action="/submit">Submit</button>
+      </div>
+    </form>
+  </div>
 
-    <div>
-      <table id='scoretable' style="width:auto">
+  <div class="center">
+    <table id='scoretable' style="width:auto">
+
       <tr>
         <th>Placing</th>
         <th>Player Name</th>
         <th>Clicks Per Second</th>
         <th>Total Clicks</th>
+        <th>Seconds</th>
       </tr>
+
       <tr>
         <td>#1</td>
         <td>Mr. Insano</td>
         <td>73.3</td>
         <td>2,200</td>
+        <td>30</td>
       </tr>
+
       <tr>
         <td>#2</td>
         <td>Cui2</td>
         <td>2</td>
         <td>60</td>
+        <td>30</td>
       </tr>
-      </table>
-    </div>
 
-  </body>
+    </table>
+  </div>
+
+</body>
+
 </html>
