Added funny quip

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <p id="WelcomeText">
       This is a webpage for Jordan Stoessel's Assignment 2. After hitting the <strong>start</strong> button you will be
-      timed for 30 seconds to click as fast as you can. Your results will be displayed within the
+      timed for some seconds (that you define!) to click as fast as you can. Your results will be displayed within the
       <strong>leaderboard</strong>. Try to get the high score!
     </p>
   </div>
