Added formidable for form loading on post requests

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
           </h3>
         </header>
         <p class="u_txt">An image is required for a new cat entry to be made</p>
-        <form class="c_newCatFormSection__form" action="">
+        <form enctype="multipart/form-data" class="c_newCatFormSection__form" action="">
           <label 
             for="name" 
             class="u_txt c_newCatForm__label"
