finished README and checked validation

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
   </head>
   <body>
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Kumbh+Sans&display=swap"
+      rel="stylesheet"
+    />
     <script src="js/scripts.js"></script>
-    <img />
+    <img src="images/books.jpg" alt="an open book" width="1600" height="300" />
     <div class="container">
       <form action="">
         <input type="text" id="title" placeholder="Book Title" />
