--- a/public/index.html
+++ b/public/index.html
@@ -1,90 +1,50 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
-<script src="../server.improved.js"></script>
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 <!doctype html>
 <html lang="en">
+
   <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Grandstander&family=Inconsolata:wght@600&family=Source+Code+Pro&display=swap" rel="stylesheet">
+<script src="js/scripts.js"></script>
+<title>CS4241 Assignment 2</title>
+<meta charset="utf-8">
   </head>
-    <form action="" id="contact-form" class="contact-form">
-      Food Name <input type="text" id="foodname" name = "foodname" value="ex. broccoli">
+  
+  
+   <body>
+     <h1>
+       Inside my Refrigerator
+     </h1>
+     a tool used to aid in keeping track of and storing food items in your refrigerator!
+    <form id="contact-form" class="contact-form">
+      Food Name <input type="text" id="foodname" name = "foodname" >
       <br>
-      When was the food item purchased?<input type= "date" id = 'purchased'  name = 'purchased'>
+      When was the food item purchased?  <input type= "date" id = "purchased"  name = "purchased">
+      
       <br>
-      How much do you enjoy this item? (between 1 and 5):<input type="number" id="enjoyability" name="enjoyability" min="1" max="5">
+      How much do you enjoy this item? (1-dislike, 5-love):<input type="number" id="enjoyability" name="enjoyability" min="1" max="5">
       <br>
-        <label for="size">Select Size of Item:</label>
+        <label for="size">Select Size of Item (ex. small-orange): </label>
         <select name="size" id="size">
           <option value="small">small</option>
           <option value="medium">medium</option>
           <option value="large">large</option>
         </select>
-      <button id="btn">Submit form</button>
+      <br>
+      <br>
 
-
-      
-
-      <button>Edit</button>      <button onclick="buildTable()">Add</button> <!-- will only work if second button for some reason 
-
-      <button>Remove</button>  -->
-    </div>  
-  </div>
-  <div id="msg">
-      <pre></pre>
-  </div>  
+      <button id="btn">Submit form</button> 
   </form>
- <body>
 
-  <!-- <button onclick="buildTable(myArray)">submit</button>-->
-    <table onload="buildTable(myArray)" class="table table-striped">
-      <tr  class="bg-info">
+    <table class="table table-striped"> 
+        <tr  class="bg-info">
           <th>Food Name</th>
           <th>Date Bought</th>
           <th>Enjoy</th>
           <th>Size</th>
           <th>Placement</th>
-          <th>Date Use By</th>
-
-
       </tr>
       <tbody id="myTable">
-  </body>     
     </tbody>
 </table>
-
-<!-- 
-
-
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
-</html> -->
+</body> 
+</html>
