--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,20 @@
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lobster"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Play"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Acme"
+    />
   </head>
 
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Lobster"
-  />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Play" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Acme" />
   <body>
     <h1>
       Students List
@@ -43,187 +49,185 @@
           <button id="Add">Add</button>
         </container>
       </form>
-
     </div>
     <div id="newInput" visibility="hidden">
       <p>
         Modify The Data
       </p>
       <contsainer class="studentList">
-      <input type="text" id="newName" value="Name" />
-      <input type="text" id="newMajor" value="Major" />
-      <input type="text" id="newClass" value="Class" />
-      <button id="Save">
-        Save
-      </button>
+        <input type="text" id="newName" value="Name" />
+        <input type="text" id="newMajor" value="Major" />
+        <input type="text" id="newClass" value="Class" />
+        <button id="Save">
+          Save
+        </button>
       </contsainer>
     </div>
 
-  </body>
-  <script>
-    function updateTable(json, i) {
-      var row = document.getElementById("table").rows[i].cells;
-      row[0].innerHTML = json.name;
-      row[1].innerHTML = json.major;
-      row[2].innerHTML = json.classYear;
-      row[3].innerHTML = json.classYear - 4;
-      newInput = document.getElementById("newInput");
-      newInput.style.visibility = "hidden";
-    }
-
-    function addRow(json, i) {
-      for (i; i < json.length; i++) {
-        var row = document.createElement("tr");
-        var table = document.getElementById("table");
-        var td1 = document.createElement("td");
-        var td2 = document.createElement("td");
-        var td3 = document.createElement("td");
-        var td4 = document.createElement("td");
-        var td5 = document.createElement("td");
-        var td6 = document.createElement("td");
-        td1.innerHTML = json[i].name;
-        td2.innerHTML = json[i].major;
-        td3.innerHTML = json[i].classYear;
-        td4.innerHTML = json[i].admissionYear;
-
-        var remove = document.createElement("button");
-        remove.innerHTML = "Edit";
-        remove.onclick = function() {
-          var parent = this.parentNode.parentNode;
-          // parent.parentNode.removeChild(parent);
-          var rowIdx = parent.rowIndex;
-          editRow(rowIdx);
-        };
-        td5.appendChild(remove);
-
-        var remove = document.createElement("button");
-        remove.innerHTML = "Remove";
-        remove.onclick = function() {
-          var parent = this.parentNode.parentNode;
-          // parent.parentNode.removeChild(parent);
-          var rowIdx = parent.rowIndex;
-          removeRow(rowIdx, parent);
-        };
-        td6.appendChild(remove);
-
-        row.appendChild(td1);
-        row.appendChild(td2);
-        row.appendChild(td3);
-        row.appendChild(td4);
-        row.appendChild(td5);
-        row.appendChild(td6);
-
-        table.children[0].appendChild(row);
+    <script>
+      function updateTable(json, i) {
+        var row = document.getElementById("table").rows[i].cells;
+        row[0].innerHTML = json.name;
+        row[1].innerHTML = json.major;
+        row[2].innerHTML = json.classYear;
+        row[3].innerHTML = json.classYear - 4;
+        newInput = document.getElementById("newInput");
+        newInput.style.visibility = "hidden";
       }
-    }
 
-    function updateRow(rowIdx) {
-      const name = document.querySelector("#newName");
-      const major = document.querySelector("#newMajor");
-      const classYear = document.querySelector("#newClass");
-      const json = {
-        name: document.getElementById("newName").value,
-        major: document.getElementById("newMajor").value,
-        classYear: document.getElementById("newClass").value,
-        admissionYear: document.getElementById("newClass").value - 4,
-        idx: rowIdx
+      function addRow(json, i) {
+        for (i; i < json.length; i++) {
+          var row = document.createElement("tr");
+          var table = document.getElementById("table");
+          var td1 = document.createElement("td");
+          var td2 = document.createElement("td");
+          var td3 = document.createElement("td");
+          var td4 = document.createElement("td");
+          var td5 = document.createElement("td");
+          var td6 = document.createElement("td");
+          td1.innerHTML = json[i].name;
+          td2.innerHTML = json[i].major;
+          td3.innerHTML = json[i].classYear;
+          td4.innerHTML = json[i].admissionYear;
+
+          var remove = document.createElement("button");
+          remove.innerHTML = "Edit";
+          remove.onclick = function() {
+            var parent = this.parentNode.parentNode;
+            // parent.parentNode.removeChild(parent);
+            var rowIdx = parent.rowIndex;
+            editRow(rowIdx);
+          };
+          td5.appendChild(remove);
+
+          var remove = document.createElement("button");
+          remove.innerHTML = "Remove";
+          remove.onclick = function() {
+            var parent = this.parentNode.parentNode;
+            // parent.parentNode.removeChild(parent);
+            var rowIdx = parent.rowIndex;
+            removeRow(rowIdx, parent);
+          };
+          td6.appendChild(remove);
+
+          row.appendChild(td1);
+          row.appendChild(td2);
+          row.appendChild(td3);
+          row.appendChild(td4);
+          row.appendChild(td5);
+          row.appendChild(td6);
+
+          table.children[0].appendChild(row);
+        }
+      }
+
+      function updateRow(rowIdx) {
+        const name = document.querySelector("#newName");
+        const major = document.querySelector("#newMajor");
+        const classYear = document.querySelector("#newClass");
+        const json = {
+          name: document.getElementById("newName").value,
+          major: document.getElementById("newMajor").value,
+          classYear: document.getElementById("newClass").value,
+          admissionYear: document.getElementById("newClass").value - 4,
+          idx: rowIdx
+        };
+        const body = JSON.stringify(json);
+
+        fetch("/edit", {
+          method: "POST",
+          body
+        })
+          .then(function(response) {
+            return response.json();
+          })
+          .then(function(response) {
+            delete json.idx;
+            console.log(json);
+            updateTable(json, rowIdx);
+            console.log("Row changed");
+          });
+      }
+
+      function editRow(rowIdx) {
+        newInput = document.getElementById("newInput");
+        newInput.style.visibility = "visible";
+        var row = document.getElementById("table").rows[rowIdx].cells;
+
+        document.getElementById("newName").value = row[0].innerHTML;
+        document.getElementById("newMajor").value = row[1].innerHTML;
+        document.getElementById("newClass").value = row[2].innerHTML;
+
+        document.getElementById("Save").onclick = function() {
+          updateRow(rowIdx);
+        };
+      }
+      function removeRow(rowIdx, parent) {
+        fetch("/remove", {
+          method: "POST",
+          body: JSON.stringify(rowIdx)
+        })
+          .then(function(response) {
+            return response.json();
+          })
+          .then(function(response) {
+            console.log(response);
+            parent.parentNode.removeChild(parent);
+            console.log("Row removed.");
+          });
+      }
+
+      const showTable = function() {
+        fetch("/submit", {
+          method: "POST"
+        })
+          .then(function(response) {
+            return response.json();
+          })
+          .then(function(json) {
+            console.log(json);
+            addRow(json, 0);
+          });
+
+        return false;
       };
-      const body = JSON.stringify(json);
 
-      fetch("/edit", {
-        method: "POST",
-        body
-      })
-        .then(function(response) {
-          return response.json();
+      const submit = function(e) {
+        // prevent default form action from being carried out
+        e.preventDefault();
+
+        const name = document.querySelector("#name");
+        const major = document.querySelector("#major");
+        const classYear = document.querySelector("#class");
+        const json = {
+          name: document.getElementById("name").value,
+          major: document.getElementById("major").value,
+          classYear: document.getElementById("class").value,
+          admissionYear: document.getElementById("class").value - 4
+        };
+        const body = JSON.stringify(json);
+
+        fetch("/submit", {
+          method: "POST",
+          body
         })
-        .then(function(response) {
-          delete json.idx;
-          console.log(json);
-          updateTable(json, rowIdx);
-          console.log("Row changed");
-        });
-    }
+          .then(function(response) {
+            // do something with the reponse
+            return response.json();
+          })
+          .then(function(json) {
+            console.log(json);
+            addRow(json, json.length - 1);
+          });
 
-    function editRow(rowIdx) {
-      newInput = document.getElementById("newInput");
-      newInput.style.visibility = "visible";
-      var row = document.getElementById("table").rows[rowIdx].cells;
-      
-      document.getElementById("newName").value = row[0].innerHTML;
-      document.getElementById("newMajor").value = row[1].innerHTML;
-      document.getElementById("newClass").value = row[2].innerHTML
-      
-
-      document.getElementById("Save").onclick = function() {
-        updateRow(rowIdx);
+        return false;
       };
-    }
-    function removeRow(rowIdx, parent) {
-      fetch("/remove", {
-        method: "POST",
-        body: JSON.stringify(rowIdx)
-      })
-        .then(function(response) {
-          return response.json();
-        })
-        .then(function(response) {
-          console.log(response);
-          parent.parentNode.removeChild(parent);
-          console.log("Row removed.");
-        });
-    }
 
-    const showTable = function() {
-      fetch("/submit", {
-        method: "POST"
-      })
-        .then(function(response) {
-          return response.json();
-        })
-        .then(function(json) {
-          console.log(json);
-          addRow(json, 0);
-        });
-
-      return false;
-    };
-
-    const submit = function(e) {
-      // prevent default form action from being carried out
-      e.preventDefault();
-
-      const name = document.querySelector("#name");
-      const major = document.querySelector("#major");
-      const classYear = document.querySelector("#class");
-      const json = {
-        name: document.getElementById("name").value,
-        major: document.getElementById("major").value,
-        classYear: document.getElementById("class").value,
-        admissionYear: document.getElementById("class").value - 4
+      window.onload = function() {
+        showTable();
+        const button = document.querySelector("#Add");
+        button.onclick = submit;
       };
-      const body = JSON.stringify(json);
-
-      fetch("/submit", {
-        method: "POST",
-        body
-      })
-        .then(function(response) {
-          // do something with the reponse
-          return response.json();
-        })
-        .then(function(json) {
-          console.log(json);
-          addRow(json, json.length - 1);
-        });
-
-      return false;
-    };
-
-    window.onload = function() {
-      showTable();
-      const button = document.querySelector("#Add");
-      button.onclick = submit;
-    };
-  </script>
+    </script>
+  </body>
 </html>
