😽🦃 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     </p>
 
     <div class="input">
-      <form action="">
+      <form action="post">
         <container class="studentList">
           <input type="text" id="name" value="Name" />
           <input type="text" id="major" value="Major" />
