🎺👻 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -42,26 +42,26 @@
 
     <div class="input">
       <form action="post">
-        <container class="studentList">
+        <div class="studentList">
           <input type="text" id="name" value="Name" />
           <input type="text" id="major" value="Major" />
           <input type="text" id="class" value="Class" />
           <button id="Add">Add</button>
-        </container>
+        </div>
       </form>
     </div>
-    <div id="newInput" visibility="hidden">
+    <div id="newInput">
       <p>
         Modify The Data
       </p>
-      <contsainer class="studentList">
+      <div class="studentList">
         <input type="text" id="newName" value="Name" />
         <input type="text" id="newMajor" value="Major" />
         <input type="text" id="newClass" value="Class" />
         <button id="Save">
           Save
         </button>
-      </contsainer>
+      </div>
     </div>
 
     <script>
