--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,87 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <title>CS4241 Assignment 2: foo scheduler</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Montserrat&family=Montserrat+Alternates&family=Merriweather&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <!-- 
     <form action="">
-      <input type='text' id='yourname' value="your name here">
+      <input type="text" id="yourname" value="your name here">
       <button>submit</button>
     </form>
+    <table id="displayTable">
+      <tr><th>name</th></tr>
+    </table>
+-->
+
+    <div class="container">
+      <div class="calendar-left">
+        <div class="num-date">
+          <span id="date"></span>
+        </div>
+        <!--num-date -->
+        <div class="day">
+          <span id="dateOfWeek"></span>
+        </div>
+        <!--day -->
+        <div class="current-events">
+          <span class="current-events subtitle">Finish Today!</span>
+          <br />
+          <div class="todoList">
+            <ul class="current-events" id="undoList"></ul>
+          </div>
+
+        </div>
+        <!--current-events -->
+
+        <div class="create-event">
+          <div>
+            <form>
+            <input
+              type="text"
+              id="todo"
+              class="no-outline"
+              placeholder="Enter a Task"
+            />
+            <input
+              type="text"
+              id="duration"
+              class="no-outline"
+              placeholder="Duration"
+            />
+            </form>
+          </div>
+          <div>
+            <button class="submit">submit</button>
+          </div>
+        </div>
+        <!-- create-event -->
+        <hr class="event-line" />
+        <!-- add-event -->
+      </div>
+      <!-- calendar-left -->
+      <div class="calendar-base">
+        <div class="right-events">
+          <table id="displayTable">
+            <tr>
+              <th class="checkbox"></th>
+              <th class="editicon"></th>
+              <th class="event">What to do</th>
+              <th class="eventdate">Due date</th>
+              <th class="deleteicon"></th>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <!-- calendar-base -->
+    </div>
+    <!-- container -->
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+  <script src="js/scripts.js"></script>
 </html>
