added delete button, updated technical achievement

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -38,7 +38,7 @@
       <!-- Hero content: will be in the middle -->
       <div class="hero-body">
         <div class="container table-container" id="table_holder">
-          <table class="table is-fullwidth">
+          <table class="table is-fullwidth is-hoverable is-striped">
             <thead>
               <tr>
                 <th>Position</th>
@@ -47,6 +47,7 @@
                 <th>Prototype</th>
                 <th>Lap Time</th>
                 <th>Date</th>
+                <th>Modify</th>
               </tr>
             </thead>
             <tbody id="data_table"></tbody>
