--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <h2>New Run</h2>
-      <form id="new-run-form" action="">
+      <form id="new-run-form">
 
         <label>Your Name</label>
         <input type="text" id="input-name" placeholder="ex. Jane Doe">
