--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1> Lindberg's Package Delivery Service </h1>
-    <div class="form">
+    <div class="input_section">
       <form id="package_form">
         <label for="description">Item Description:</label>
         <input type='text' id='description' placeholder="E.g: Book"><br>
