Refeactored table making function

--- a/public/index.html
+++ b/public/index.html
@@ -45,24 +45,7 @@
       return response.text();
     }).then( function(txt) {
       let appdata = JSON.parse(txt);
-      let table = document.getElementById('orders');
-      table.innerHTML = "";
-      let thead = table.createTHead();
-      let row = thead.insertRow();
-      for (let key of Object.keys(appdata[0])) {
-        let th = document.createElement("th");
-        let text = document.createTextNode(key);
-        th.appendChild(text);
-        row.appendChild(th);
-      }
-      for (let element of appdata) {
-        let row = table.insertRow();
-        for (let key in element) {
-          let cell = row.insertCell();
-          let text = document.createTextNode(element[key]);
-          cell.appendChild(text);
-        }
-      }
+      generateTable(appdata);
       return false;
     })
 
@@ -86,29 +69,33 @@
               return response.text();
             }).then( function(txt) {
               let appdata = JSON.parse(txt);
-              let table = document.getElementById('orders');
-              table.innerHTML = "";
-              let thead = table.createTHead();
-              let row = thead.insertRow();
-            for (let key of Object.keys(appdata[0])) {
-              let th = document.createElement("th");
-              let text = document.createTextNode(key);
-              th.appendChild(text);
-              row.appendChild(th);
-            }
-            for (let element of appdata) {
-              let row = table.insertRow();
-              for (let key in element) {
-                let cell = row.insertCell();
-                let text = document.createTextNode(element[key]);
-                cell.appendChild(text);
-              }
-            }
+              generateTable(appdata);
             return false;
     })
 
     return false
   };
+
+  function generateTable(appdata) {
+    let table = document.getElementById('orders');
+    table.innerHTML = "";
+    let thead = table.createTHead();
+    let row = thead.insertRow();
+    for (let key of Object.keys(appdata[0])) {
+      let th = document.createElement("th");
+      let text = document.createTextNode(key);
+      th.appendChild(text);
+      row.appendChild(th);
+    }
+    for (let element of appdata) {
+      let row = table.insertRow();
+      for (let key in element) {
+        let cell = row.insertCell();
+        let text = document.createTextNode(element[key]);
+        cell.appendChild(text);
+      }
+    }
+  }
 
   window.onload = function() {
     const orderButton = document.getElementById( 'order' );
