--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,34 @@
-<!doctype html>
-<link href="/js/scripts.js"
+<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Route Logger</h1>
-    <form id="input" action="">
-      <label for="inputRoute">Route</label>
-      <input type='text' id='inputRoute' value=""><br>
-      <label for="inputTime">Time</label>
-      <input type='text' id='inputTime' value=""><br>
-      <label for="inputDistance">Distance</label>
-      <input type='text' id='inputDistance' value=""><br>
+    <script src="/js/scripts.js"></script>
+    <h1>Alex's Training Log</h1>
+    <form id="input" action="submit">
+      <label for="inputRoute">Route Name</label>
+      <input type="text" id="inputRoute" value="" /><br />
+      <label for="inputTime">Time (only in whole minutes)</label>
+      <input type="text" id="inputTime" value="" /><br />
+      <label for="inputDistance">Distance (in miles)</label>
+      <input type="text" id="inputDistance" value="" /><br />
       <p></p>
       <button>submit</button>
     </form>
-    <hr></hr>
-    <table id="resultTable">
+    <hr />
+    <table>
       <thead>
         <tr>
           <th>Route</th>
           <th>Time</th>
           <th>Distance</th>
-          <th>Fitness</th>
+          <th>Fitness Score</th>
         </tr>
       </thead>
-      <tbody>
-      </tbody>
+      <tbody id="resultTableBody"></tbody>
     </table>
   </body>
 </html>
