Updated readme and fixed time bug.

--- a/public/index.html
+++ b/public/index.html
@@ -50,22 +50,25 @@
         <th>Clicks Per Second</th>
         <th>Total Clicks</th>
         <th>Seconds</th>
+        <th>Time (H:min)</th>
       </tr>
 
       <tr>
         <td>#1</td>
         <td>Mr. Insano</td>
-        <td>73.3</td>
-        <td>2,200</td>
-        <td>30</td>
+        <td>105.1</td>
+        <td>1051</td>
+        <td>10</td>
+        <td>15:27</td>
       </tr>
 
       <tr>
         <td>#2</td>
-        <td>Cui2</td>
-        <td>2</td>
-        <td>60</td>
-        <td>30</td>
+        <td>Matthew</td>
+        <td>5.4</td>
+        <td>54</td>
+        <td>10</td>
+        <td>15:27</td>
       </tr>
 
     </table>
